--- a/app/src/main/res/layout/addlogpopup.xml
+++ b/app/src/main/res/layout/addlogpopup.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,11 +13,14 @@
         android:layout_marginTop="14dp"
         android:ems="10"
         android:fontFamily="@font/prompt"
-
+        android:textColorHint="@color/lightGrey"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/lightGrey"
         android:hint="Date"
         android:inputType="date"
         android:maxLength="10"
         android:textAlignment="center"
+        android:gravity="center"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,8 +33,12 @@
         android:layout_marginTop="14dp"
         android:ems="10"
         android:fontFamily="@font/prompt"
+        android:textColorHint="@color/lightGrey"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/lightGrey"
         android:hint="Distance"
         android:inputType="number|numberDecimal"
+        android:gravity="center"
         android:maxLength="5"
         android:textAlignment="center"
         android:textSize="24sp"
@@ -49,6 +57,10 @@
         android:inputType="number"
         android:maxLength="2"
         android:textAlignment="center"
+        android:gravity="center"
+        android:textColorHint="@color/lightGrey"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/lightGrey"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.784"
@@ -65,10 +77,14 @@
         android:fontFamily="@font/prompt"
         android:hint="Hours"
         android:inputType="number"
+        android:textColorHint="@color/lightGrey"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/lightGrey"
         android:maxLength="2"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center"
         app:layout_constraintHorizontal_bias="0.215"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Distance" />
@@ -82,7 +98,11 @@
         android:fontFamily="@font/prompt"
         android:hint="Calories"
         android:inputType="number"
+        android:textColorHint="@color/lightGrey"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/lightGrey"
         android:maxLength="4"
+        android:gravity="center"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -149,9 +169,10 @@
 
     <Spinner
         android:id="@+id/Type"
-        android:layout_width="175dp"
+        android:layout_width="270dp"
         android:layout_height="52dp"
         android:layout_marginTop="14dp"
+        android:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Error" />
