--- a/app/src/main/res/layout/update_log_popup.xml
+++ b/app/src/main/res/layout/update_log_popup.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -25,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="128dp"
         android:ems="10"
+        android:gravity="center"
 
         android:fontFamily="@font/prompt"
         android:hint="Date"
@@ -43,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
         android:ems="10"
+        android:gravity="center"
         android:fontFamily="@font/prompt"
         android:hint="Distance"
         android:inputType="number|numberDecimal"
@@ -59,6 +62,7 @@
         android:layout_height="53dp"
         android:layout_marginTop="12dp"
         android:ems="10"
+        android:gravity="center"
         android:fontFamily="@font/prompt"
         android:hint="Minutes"
         android:inputType="number"
@@ -76,6 +80,7 @@
         android:layout_height="53dp"
 
         android:layout_marginTop="12dp"
+        android:gravity="center"
         android:ems="10"
         android:fontFamily="@font/prompt"
         android:hint="Hours"
@@ -97,6 +102,7 @@
         android:fontFamily="@font/prompt"
         android:hint="Calories"
         android:inputType="number"
+        android:gravity="center"
         android:maxLength="3"
         android:textAlignment="center"
         android:textSize="24sp"
