--- a/app/src/main/res/layout/activity_tracking_screen.xml
+++ b/app/src/main/res/layout/activity_tracking_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:onClick="goBack"
-    tools:context=".Screens.TrackingScreen"
+    tools:context=".Screens.trackingScreen"
     android:background="@color/white">
 
     <TextView
