--- a/app/src/main/res/layout/information_popup.xml
+++ b/app/src/main/res/layout/information_popup.xml
@@ -2,24 +2,21 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="0dp"
+        android:layout_width="264dp"
         android:layout_height="303dp"
-        android:layout_marginStart="74dp"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="74dp"
         android:fontFamily="@font/prompt"
+        android:gravity="center"
         android:text="@string/welcome"
         android:textAlignment="center"
-        android:textSize="24sp"
         android:textColor="@color/grey"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,25 +24,12 @@
         android:id="@+id/exit"
         android:layout_width="35dp"
         android:layout_height="27dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_outline_clear_24" />
 
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="top"
-        app:constraint_referenced_ids="exit" />
-
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="left"
-        app:constraint_referenced_ids="exit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
