--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -10,13 +10,13 @@
         android:layout_width="0dp"
         android:layout_height="?android:attr/listPreferredItemHeight"
         android:fontFamily="@font/prompt"
-        android:textColor="@color/lightBlue"
+        android:gravity="center"
+        android:paddingLeft="0dp"
         android:textAlignment="textStart"
-        android:paddingLeft="15dp"
+        android:textColor="@color/lightBlue"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.002" />
