--- a/app/src/main/res/layout/update_log_popup.xml
+++ b/app/src/main/res/layout/update_log_popup.xml
@@ -24,6 +24,9 @@
         android:id="@+id/Date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColorHint="@color/lightGrey"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/lightGrey"
         android:layout_marginTop="128dp"
         android:ems="10"
         android:gravity="center"
@@ -46,6 +49,9 @@
         android:layout_marginTop="14dp"
         android:ems="10"
         android:gravity="center"
+        android:textColorHint="@color/lightGrey"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/lightGrey"
         android:fontFamily="@font/prompt"
         android:hint="Distance"
         android:inputType="number|numberDecimal"
@@ -63,6 +69,9 @@
         android:layout_marginTop="12dp"
         android:ems="10"
         android:gravity="center"
+        android:textColorHint="@color/lightGrey"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/lightGrey"
         android:fontFamily="@font/prompt"
         android:hint="Minutes"
         android:inputType="number"
@@ -84,6 +93,9 @@
         android:ems="10"
         android:fontFamily="@font/prompt"
         android:hint="Hours"
+        android:textColorHint="@color/lightGrey"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/lightGrey"
         android:inputType="number"
         android:maxLength="2"
         android:textAlignment="center"
@@ -102,8 +114,11 @@
         android:fontFamily="@font/prompt"
         android:hint="Calories"
         android:inputType="number"
+        android:textColorHint="@color/lightGrey"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/lightGrey"
         android:gravity="center"
-        android:maxLength="3"
+        android:maxLength="4"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
