--- a/app/src/main/res/layout/loginpopup.xml
+++ b/app/src/main/res/layout/loginpopup.xml
@@ -117,6 +117,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.022"
         app:srcCompat="@drawable/ic_outline_clear_24"
+        android:clickable="false"
         android:onClick="closePopUp"/>
 
     <TextView
