--- a/app/src/main/res/layout/update_log_popup.xml
+++ b/app/src/main/res/layout/update_log_popup.xml
@@ -2,61 +2,65 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <Button
         android:id="@+id/Delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
+        android:layout_marginEnd="0dp"
         android:background="@drawable/addlogpopupbuttons"
         android:fontFamily="@font/prompt"
         android:onClick="createNewLog"
         android:text="Delete Entry"
+        android:textSize="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.914"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Calories" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/guideline23"
+        app:layout_constraintTop_toBottomOf="@+id/Calories"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/Date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/lightGrey"
-        android:textColor="@color/black"
+        android:layout_marginTop="5dp"
         android:backgroundTint="@color/lightGrey"
-        android:layout_marginTop="128dp"
         android:ems="10"
-        android:gravity="center"
-
         android:fontFamily="@font/prompt"
+        android:gravity="center"
         android:hint="Date"
+
         android:inputType="date"
         android:maxLength="10"
         android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textColorHint="@color/lightGrey"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/Error" />
 
     <EditText
         android:id="@+id/Distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
-        android:ems="10"
-        android:gravity="center"
-        android:textColorHint="@color/lightGrey"
-        android:textColor="@color/black"
         android:backgroundTint="@color/lightGrey"
+        android:ems="10"
         android:fontFamily="@font/prompt"
+        android:gravity="center"
         android:hint="Distance"
         android:inputType="number|numberDecimal"
         android:maxLength="5"
         android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textColorHint="@color/lightGrey"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,16 +71,16 @@
         android:layout_width="114dp"
         android:layout_height="53dp"
         android:layout_marginTop="12dp"
-        android:ems="10"
-        android:gravity="center"
-        android:textColorHint="@color/lightGrey"
-        android:textColor="@color/black"
         android:backgroundTint="@color/lightGrey"
+        android:ems="10"
         android:fontFamily="@font/prompt"
+        android:gravity="center"
         android:hint="Minutes"
         android:inputType="number"
         android:maxLength="2"
         android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textColorHint="@color/lightGrey"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.784"
@@ -89,16 +93,16 @@
         android:layout_height="53dp"
 
         android:layout_marginTop="12dp"
-        android:gravity="center"
+        android:backgroundTint="@color/lightGrey"
         android:ems="10"
         android:fontFamily="@font/prompt"
+        android:gravity="center"
         android:hint="Hours"
-        android:textColorHint="@color/lightGrey"
-        android:textColor="@color/black"
-        android:backgroundTint="@color/lightGrey"
         android:inputType="number"
         android:maxLength="2"
         android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textColorHint="@color/lightGrey"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.215"
@@ -110,16 +114,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
+        android:backgroundTint="@color/lightGrey"
         android:ems="10"
         android:fontFamily="@font/prompt"
+        android:gravity="center"
         android:hint="Calories"
         android:inputType="number"
-        android:textColorHint="@color/lightGrey"
-        android:textColor="@color/black"
-        android:backgroundTint="@color/lightGrey"
-        android:gravity="center"
         android:maxLength="4"
         android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textColorHint="@color/lightGrey"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,25 +137,28 @@
         android:background="@drawable/addlogpopupbuttons"
         android:fontFamily="@font/prompt"
         android:onClick="createNewLog"
+        android:textSize="12dp"
         android:text="Save Changes"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.089"
+        app:layout_constraintBottom_toTopOf="@+id/guideline24"
+        app:layout_constraintEnd_toStartOf="@+id/guideline23"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Calories" />
+        app:layout_constraintTop_toBottomOf="@+id/Calories"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/Cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="112dp"
         android:background="@drawable/addlogpopupbuttons"
+
         android:fontFamily="@font/prompt"
         android:onClick="can"
         android:text="Cancel"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Calories" />
+        app:layout_constraintTop_toTopOf="@+id/guideline25" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier8"
@@ -176,11 +183,30 @@
         android:textAlignment="center"
         android:textColor="@color/red"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline23"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline24"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.64705884" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline25"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".9347" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
