--- a/app/src/main/res/layout/activity_cardio_display_screen.xml
+++ b/app/src/main/res/layout/activity_cardio_display_screen.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     tools:context=".cardioDisplayScreen">
 
     <ImageView
@@ -48,13 +48,15 @@
     <TextView
         android:id="@+id/message"
         android:layout_width="198dp"
-        android:layout_height="106dp"
+        android:layout_height="175dp"
         android:layout_marginTop="0dp"
         android:gravity="center"
         android:text="@string/newlogmessage"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="18sp"
+        android:fontFamily="@font/prompt"
+
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,8 +90,12 @@
         android:background="@drawable/bluecirclebutton"
         android:onClick="createNewLog"
 
+        android:fontFamily="@font/prompt"
+
         android:text="+"
         android:textSize="50dp"
+        android:gravity="center"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@id/guideline13"
         app:layout_constraintEnd_toStartOf="@id/guideline12"
         app:layout_constraintHorizontal_bias="0.0"
