--- a/app/src/main/res/layout/activity_tracking_screen.xml
+++ b/app/src/main/res/layout/activity_tracking_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,8 +16,8 @@
         android:gravity="center"
         android:text="Distance"
         android:textAlignment="center"
-        android:textSize="20dp"
         android:textColor="@color/black"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guideline21" />
@@ -25,8 +26,8 @@
         android:id="@+id/tvSpeed"
         android:layout_width="171dp"
         android:layout_height="87dp"
-        android:fontFamily="@font/prompt"
         android:layout_marginTop="0dp"
+        android:fontFamily="@font/prompt"
         android:gravity="center"
         android:text="0.00 MPH"
         android:textAlignment="center"
@@ -43,9 +44,9 @@
         android:id="@+id/tvCalories"
         android:layout_width="171dp"
         android:layout_height="87dp"
+        android:layout_marginTop="0dp"
         android:fontFamily="@font/prompt"
         android:gravity="center"
-        android:layout_marginTop="0dp"
         android:text="Calories Burned: "
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -61,11 +62,11 @@
         android:id="@+id/tvDistance"
         android:layout_width="385dp"
         android:layout_height="96dp"
+        android:layout_marginTop="0dp"
         android:fontFamily="@font/prompt"
         android:gravity="center"
         android:text="0.00"
         android:textAlignment="center"
-        android:layout_marginTop="0dp"
         android:textColor="@color/black"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,30 +111,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline20"
-        app:layout_constraintVertical_bias="0.894" />
-
-    <ImageView
-        android:id="@+id/btnPause"
-        android:layout_width="85dp"
-        android:layout_height="85dp"
-        android:clickable="true"
-        android:layout_marginEnd="0dp"
-        android:onClick="PauseRun"
-        android:src="@drawable/pausecircle"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnPlay"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline20"
-        app:layout_constraintVertical_bias="0.894" />
+        app:layout_constraintVertical_bias="0.572" />
 
     <ImageView
         android:id="@+id/btnStop"
         android:layout_width="85dp"
         android:layout_height="85dp"
         android:clickable="false"
-        android:layout_marginStart="0dp"
         android:onClick="StopRun"
         android:src="@drawable/stopcircle"
         android:visibility="invisible"
@@ -142,7 +126,22 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/btnPlay"
         app:layout_constraintTop_toTopOf="@+id/guideline20"
-        app:layout_constraintVertical_bias="0.894" />
+        app:layout_constraintVertical_bias="0.572" />
+
+    <ImageView
+        android:id="@+id/btnPause"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:clickable="true"
+        android:onClick="PauseRun"
+        android:src="@drawable/pausecircle"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnPlay"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline20"
+        app:layout_constraintVertical_bias="0.572" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -200,14 +199,49 @@
         android:layout_width="50dp"
         android:layout_height="35dp"
         android:fontFamily="@font/prompt"
-        android:textColor="@color/black"
         android:gravity="center"
         android:text="Time"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline22" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline25"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.91928864" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:text="You're Missing an Ad"
+        android:textAlignment="center"
+        android:gravity="center"
+        tools:layout_editor_absoluteX="80dp"
+        tools:layout_editor_absoluteY="692dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline25"
+        android:layout_width="0dp"
+        android:layout_height="0dp"/>
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:adSize="BANNER"
+        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline25"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
