--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,9 @@
     <color name="grey">#30332e</color>
     <color name="lightGrey">#a1a9a8</color>
     <color name="red">#ff0000</color>
+    <color name="raisenBlack">#2d2a32</color>
+    <color name="titaniumYellow">#DDD92A</color>
+    <color name="mYellow">#EAE151</color>
+    <color name="gYellow">#EEEFA8</color>
+    <color name="babyPowder">#FAFDF6</color>
 </resources>
