--- a/app/src/main/res/layout/activity_tracking_screen.xml
+++ b/app/src/main/res/layout/activity_tracking_screen.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Screens.trackingScreen">
+    tools:context=".Screens.trackingScreen"
+
+    >
 
     <TextView
         android:id="@+id/textView10"
@@ -76,6 +78,8 @@
 
     <TextView
         android:id="@+id/textView"
+        android:textColor="@color/black"
+        android:fontFamily="@font/prompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="67dp"
@@ -236,7 +240,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:adSize="BANNER"
-        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        app:adUnitId="ca-app-pub-1722662491079932/9702305719"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
